<resources>
    <string name="app_name">Animals</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animals">Animals</string>
    <string name="add">Add</string>
    <string name="add_an_animal">Add an animal</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <string name="breed">Breed</string>
    <string name="favorite_food">Favorite food</string>
    <string name="dona">Dona</string>
    <string name="female">Female</string>
    <string name="dog">Dog</string>
    <string name="husky">Husky</string>
    <string name="chicken">Chicken</string>
    <string name="age">Age</string>
    <string name="_7">7</string>
    <string name="Habitat">Habitat</string>
    <string name="how_does_it_move">How does it move?</string>
    <string name="fly">FLY</string>
    <string name="walk">WALK</string>
    <string name="swim">SWIM</string>

    <string-array name="habitat">
        <item>Aquarium</item>
        <item>Backyard</item>
        <item>House</item>
        <item>Bird Cage</item>
        <item>Terrarium</item>
    </string-array>
</resources>